Bug 238167 - incorrect values imported with illformed qif
Summary: incorrect values imported with illformed qif
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Unspecified
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-19 13:27 UTC by allan
Modified: 2010-06-01 10:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description allan 2010-05-19 13:27:17 UTC
Version:           Version 3.98.0-svn1127006 (using KDE 4.3.5)
Installed from:    openSUSE RPMs

On importing a manufactured qif file with one entry ill-formed, the amounts from the other, correct, entries are multiplied by 100!!

Here's the qif file content.

!Type:Bank
D04/05/2010
P'UNITED UTIL PLC
T-15.54
MD/D
^
D11/05/2010
P'10MAY NET 27558355
T0.20
MINT
^
D11/05/2010
P'0318 05MAY10 
T FID
MPOS
^
The last entry has an incorrect amount field, but the other two entries are correct.  The -15.54 becomes -1554.00 and the 0.20 becomes 20.00.

It looks like there is incorrect validity checking in the amount field.

The same shows also in v1.03.
Comment 1 Thomas Baumgart 2010-06-01 10:14:57 UTC
SVN commit 1133151 by tbaumgart:

Only allow comma and dot as delimiters and separators during QIF import

BUG: 238167

 M  +5 -2      mymoneyqifprofile.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1133151