Only allow comma and dot as delimiters and separators during QIF import

BUG: 238167

svn path=/trunk/kdereview/kmymoney/; revision=1133151