kmymoney/converter/mymoneyqifprofile.cpp
@@ -954,9 +954,12 @@ void MyMoneyQifProfile::scanNumeric(const QString& txt, QChar& decimal, QChar& t
   QChar first, second;
   QRegExp numericChars("[0-9-()]");
   for (int i = 0; i < txt.length(); ++i) {
-    if (numericChars.indexIn(txt[i]) == -1) {
-      first = second;
-      second = txt[i];
+    const QChar& c = txt[i];
+    if (numericChars.indexIn(c) == -1) {
+      if (c == '.' || c == ',') {
+        first = second;
+        second = c;
+      }
     }
   }
   if (!second.isNull())
